manifests/hetzner/keycloak/deployment-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:REPLACEME
        args: ["start"]
        ports:
        - name: http
          containerPort: 8080
        - name: jgroups
          containerPort: 7800
        - name: management
          containerPort: 9000
        - name: jgroups-fd
          containerPort: 57800
        startupProbe:
          httpGet:
            path: /health/started
            port: 9000
          periodSeconds: 1
          failureThreshold: 600
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9000
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9000
          periodSeconds: 10
          failureThreshold: 3
        resources:
          limits:
            memory: 768Mi
          requests:
            memory: 768Mi
        volumeMounts:
        - mountPath: /opt/keycloak/providers/keycloak-altcha-jar-with-dependencies.jar
          name: altcha-plugin
          subPath: keycloak-altcha-jar-with-dependencies.jar
        - mountPath: /opt/keycloak/providers/keycloak-rbac-provider.jar
          name: altcha-plugin
          subPath: keycloak-rbac-provider.jar
      volumes:
      - name: altcha-plugin
        configMap:
          name: altcha-plugin
