manifests/hetzner/keycloak/statefulset-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-postgres
spec:
  selector:
    matchLabels:
      app: keycloak-postgres
  serviceName: keycloak-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:REPLACEME
        ports:
        - containerPort: 5432
          name: pgport
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: postgres-data
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 256Mi
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 10Gi
