manifests/hetzner/keycloak/httproute-https.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-https
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: keycloak
    sectionName: websecure
  hostnames:
  - id.techwerkers.nl
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /realms/techwerkers/account/
        statusCode: 302
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: keycloak-web
      port: 8080
      weight: 1
